# Loan_Approval

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
backend/: __init__.py  package.json  pyproject.toml
backend/app/: __init__.py  __main__.py  main.py  run.py
backend/app/src/: __init__.py
backend/app/src/data/: __init__.py  data_model.py
backend/app/src/data/outputs/: trained_model.pkl
backend/app/src/models/: __init__.py  logistic_regression.py
backend/app/src/plot/: __init__.py  plots.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: InputRow.tsx  PredictionCard.tsx
requirements/: project.txt
utils/: clean.ps1  lint.ps1  setup.ps1
